--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -29,7 +29,7 @@
   /* @apply bg-[#fafafa] dark:bg-gray-600; */
 }
 .banner-button {
-  @apply text-white bg-[#48AB76] hover:text-white border  hover:bg-[#029c82] px-6 py-3 font-normal rounded-xl md:px-12 md:py-3 lg:px-12 lg:py-3 text-center mr-2 mb-2  md:font-bold lg:font-bold text-2xl;
+  @apply text-white bg-[#3D00B7] hover:text-white border  px-6 py-3 font-normal rounded-full md:px-12 md:py-3 lg:px-12 lg:py-3 text-center mr-2 mb-2  md:font-bold lg:font-bold text-2xl;
 }
 /* index.js */
 .bg-others-section {
